# py-capnweb

./: .git-town.toml  .gitignore  CHANGES.md  CLAUDE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  TODO.md  noxfile.py  pyproject.toml  ruff.toml
docs/: README.md  api-reference.md  architecture.md  quickstart.md
examples/actor-system/: README.md  main.py  supervisor.py  worker.py
examples/batch-pipelining/: README.md  client.mjs  client.py  server-node.mjs  server.py
examples/calculator/: Procfile  client.py  server.py
examples/chat/: README.md  client.py  server.py
examples/microservices/: README.md  api_gateway.py  client.py  order_service.py  user_service.py
examples/peer_to_peer/: README.md  alice.py  bob.py
examples/webtransport/: README.md  client.py  localhost.crt  localhost.key  server.py
examples/webtransport-integrated/: README.md  client.py  generate_certs.py  server.py
interop/: .gitignore  QUICKSTART.md  README.md  run_tests.sh
interop/python/: client.py  server.py
interop/typescript/: client.ts  package.json  server.ts  test_single.ts  tsconfig.json
notes/: protocol.md
src/capnweb/: __init__.py  certs.py  client.py  error.py  evaluator.py  hooks.py  parser.py  payload.py  pipeline.py  resume.py  serializer.py  server.py  session.py  stubs.py  tables.py  transports.py  types.py  webtransport.py  wire.py
src/capnweb/core/: hooks.py  mapper.py  parser.py  payload.py  pipeline.py  serializer.py  session.py  stubs.py
src/capnweb/protocol/: ids.py  wire.py
src/capnweb/transport/: transports.py  webtransport.py
tests/: __init__.py  test_automatic_dispatch.py  test_bidirectional.py  test_certs.py  test_error.py  test_examples_chat.py  test_examples_microservices.py  test_hooks.py  test_ids.py  test_improvements.py  test_integration.py  test_parser.py  test_payload.py  test_pipeline.py  test_properties.py  test_remap_evaluation.py  test_resource_management.py  test_resume.py  test_session.py  test_tables.py  test_webtransport.py  test_wire.py  test_wire_protocol.py
tests/a_unit/: test_certs.py  test_hooks.py  test_parser.py  test_payload.py  test_properties.py  test_resume.py  test_serializer.py  test_stubs.py  test_transports.py  test_websocket.py  test_webtransport.py  test_wire.py  test_wire_protocol.py
tests/a_unit/common/: test_common_properties.py  test_error.py
tests/a_unit/core/: test_core_properties.py  test_serializer.py  test_session.py
tests/a_unit/protocol/: test_ids.py  test_protocol_properties.py  test_wire_protocol.py
tests/a_unit/rpc/: test_resource_management.py
tests/a_unit/transport/: test_websocket.py  test_webtransport.py
tests/b_integration/: test_improvements.py  test_integration.py  test_map.py  test_pipeline.py
tests/c_e2e/: test_examples_actor_system.py  test_examples_batch_pipelining.py  test_examples_calculator.py  test_examples_chat.py  test_examples_microservices.py  test_examples_peer_to_peer.py  test_examples_webtransport.py
